# 36questions-2025

./: .env.template  .gitignore  36questions.json  README.md  main.py  pyproject.toml
app/agents/: question_agent.py
app/auth/: firebase_auth.py
app/mcp/: prompt_tools.py
app/models/: schemas.py
app/routes/: chat.py
app/static/: dashboard.html  index.html  styles.css
data/: prompts.json
